Use G1 instead of CMS
Bug: 161619075
Change-Id: I4fd91d664a7fca6301613368799adf0bddd6acbf